--- a/core-java-interview-questions.adoc
+++ b/core-java-interview-questions.adoc
@@ -8,15 +8,15 @@ Java Streams :
 1. Create a Java Stream to count duplicate element in ArrayList
 
 ....
-* Input : {"apple","mango","banana","banana","kivi"}
-* Output : apple = 1, mango=1, banana=2, kivi=1
+Input : {"apple","mango","banana","banana","kivi"}
+Output : apple = 1, mango=1, banana=2, kivi=1
 ....
 
 ```java
 
-    for(int i=0;i<10;i++){
-        System.out.println("insdie code >> "+i);
-    }
+for(int i=0;i<10;i++){
+    System.out.println("insdie code >> "+i);
+}
 
 ```
 
