--- a/core-java-interview-questions.adoc
+++ b/core-java-interview-questions.adoc
@@ -11,7 +11,7 @@ Q1. link:core-java/java-stream-interview-question.adoc#topic1[Create a Java Stre
 = List of Topics
 
 1. link:core-java/java-stream-interview-question.adoc#topic1[Topic1]
-2. link:core-java/java-stream-interview-question.adoctwo.adoc#topic2[Topic2]
-3. link:core-java/java-stream-interview-question.adoctwo.adoc#topic3[Topic3]
+2. link:core-java/java-stream-interview-question.adoc#topic2[Topic2]
+3. link:core-java/java-stream-interview-question.adoc#topic3[Topic3]
 
 ## Advance Experience (11 - 15 Years)
