--- a/core-java/java-stream-interview-question.adoc
+++ b/core-java/java-stream-interview-question.adoc
@@ -1,7 +1,7 @@
-= Topic Details
+= Java Streams Interview Question
 
 [[Q1]]
-Q1. Create a Java Stream to count duplicate element in ArrayList (4 answers using Streams,Loop)
+== Q1. Create a Java Stream to count duplicate element in ArrayList (4 answers using Streams,Loop)
 ....
 Input : {"apple","mango","banana","banana","kivi"}
 Output : apple = 1, mango=1, banana=2, kivi=1
@@ -17,16 +17,15 @@ for(int i=0;i<10;i++){
 
 ```
 
-[[topic1]]
-== Topic1
-Details of Topic 1 with example.
+[[Q2]]
+== Q2. Details of Topic 1 with example.
 
 [source,java]
 ----
 System.out.println("Example for Topic 1");
 ----
 
-[[topic2]]
+[[Q3]]
 == Topic2
 Details of Topic 2 with example.
 
@@ -35,7 +34,7 @@ Details of Topic 2 with example.
 System.out.println("Example for Topic 2");
 ----
 
-[[topic3]]
+[[Q4]]
 == Topic3
 Details of Topic 3 with example.
 
