--- a/core-java-interview-questions.adoc
+++ b/core-java-interview-questions.adoc
@@ -6,9 +6,9 @@
 
 === 1 : Java Streams :
 
-Q1. link:core-java/java-stream-interview-question.adoc#Q1[Create a Java Stream to count duplicate element in ArrayList (4 answers using Streams,Loop)]
-Q2. link:core-java/java-stream-interview-question.adoc#Q2[Topic1]
-Q3. link:core-java/java-stream-interview-question.adoc#Q3[Topic23]
-Q4. link:core-java/java-stream-interview-question.adoc#Q4[Topic3]
+. link:core-java/java-stream-interview-question.adoc#Q1[Create a Java Stream to count duplicate element in ArrayList (4 answers using Streams,Loop)]
+. link:core-java/java-stream-interview-question.adoc#Q2[Topic1]
+. link:core-java/java-stream-interview-question.adoc#Q3[Topic23]
+. link:core-java/java-stream-interview-question.adoc#Q4[Topic3]
 
 ## Advance Experience (11 - 15 Years)
