--- a/core-java-interview-questions.adoc
+++ b/core-java-interview-questions.adoc
@@ -2,7 +2,7 @@
 
 == 1 : Java Streams :
 
-. link:core-java/java-stream-interview-question.adoc#Q1[Create a Java Stream to count duplicate element in ArrayList] [red]#
+. link:core-java/java-stream-interview-question.adoc#Q1[Create a Java Stream to count duplicate element in ArrayList]
 _(4 answers using Streams,Loop)_
 . link:core-java/java-stream-interview-question.adoc#Q2[Topic1]
 . link:core-java/java-stream-interview-question.adoc#Q3[Topic2]
