--- a/core-java/java-stream-interview-question.adoc
+++ b/core-java/java-stream-interview-question.adoc
@@ -103,10 +103,92 @@ System.out.println("Example for Topic 2");
 ----
 :sectnums:
 [[Q4]]
-== Create a java program to find
+== Find Non-Repeatable Character in String using java Streams and loop
 Details of Topic 3 with example.
+
+https://github.com/talk2viren/java-interview-questions-examples/blob/main/src/test/java/com/example/java_interview_questions/core/Example1.java[Github Link]
 
 [source,java]
 ----
-System.out.println("Example for Topic 3");
+    void findNonRepetableChar_1() {
+//        String input = "common";
+        String input = "swiss";
+
+        char charArray[] = input.toCharArray();
+
+        Map<Character, Long> collect = IntStream.range(0, input.length())
+                .mapToObj(x -> charArray[x])
+                .collect(Collectors.groupingBy(Function.identity(), Collectors.counting()));
+
+        char found = 'x';
+        for (char x : charArray) {
+            if (collect.get(x) == 1) {
+                found = x;
+                break;
+            }
+        }
+
+        System.out.println("Value >> " + found);
+
+    }
+----
+
+[source,java]
+----
+    void findNonRepetableChar_2() {
+//        String input = "common";
+        String input = "swiss";
+
+        char charArray[] = input.toCharArray();
+
+        Map<Character, Long> collect = IntStream.range(0, input.length())
+                .mapToObj(x -> charArray[x])
+                .collect(Collectors.groupingBy(Function.identity(), LinkedHashMap::new, Collectors.counting()));
+
+        Optional<Character> first = IntStream.range(0, charArray.length)
+                .mapToObj(x -> charArray[x])
+                .filter(x -> collect.get(x) == 1)
+                .findFirst();
+
+        System.out.println(first.orElse('x'));
+
+    }
+----
+
+[source,java]
+----
+    void findNonRepetableChar_3() {
+//        String input = "common";
+        String input = "swiss";
+
+        char charArray[] = input.toCharArray();
+
+        Map<Character, Long> collect = IntStream.range(0, input.length())
+                .mapToObj(x -> charArray[x])
+                .collect(Collectors.groupingBy(Function.identity(), LinkedHashMap::new, Collectors.counting()));
+
+        collect.entrySet()
+                .stream().filter(x -> x.getValue() == 1)
+                .limit(1)  // get first occurrence
+                .forEach(System.out::println);
+
+    }
+----
+
+
+[source,java]
+----
+    void findNonRepetableChar_4() {
+        String input = "swiss";
+
+        String[] split = input.split("");
+
+        LinkedHashMap<String, Long> collect = Arrays.stream(split)
+                .collect(Collectors.groupingBy(Function.identity(), LinkedHashMap::new, Collectors.counting()));
+
+        collect.entrySet().stream().filter(x -> x.getValue() == 1)
+                .limit(1)
+                .forEach(System.out::println);
+    }
+
 ----
