--- a/java-8-core-java-interview-questions.adoc
+++ b/java-8-core-java-interview-questions.adoc
@@ -7,6 +7,6 @@
 _(4 answers using Streams,Loop)_
 . link:core-java/java-stream-interview-question.adoc#[Create a Java Program to reverse a String ]
 . link:core-java/java-stream-interview-question.adoc#Q3[Create a java program to Sort Employee Objects by first name then last name in ascending order.]
-. link:core-java/java-stream-interview-question.adoc#Q4[Topic31]
+. link:core-java/java-stream-interview-question.adoc#Q4[Find Non-Repeatable Character in String using java Streams and loop] (4 Ways, using stream, loop,Character and String)
 
 == Java Method Reference
